python/testData/inspections/UnresolvedRefTrueFalse.py
a = <error descr="Unresolved reference 'true'"><caret>true</error>